Added host missing db API (#1578)
* Added host missing db API

* Ignoring dismissed hosts & alerts
